--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,8 @@
     "circuitpython.board.vid": "0x239A",
     "circuitpython.board.pid": "0x8038",
     "python.analysis.extraPaths": [
-        "c:\\Users\\pweder07\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\boards\\0x239A\\0x8038",
-        "c:\\Users\\pweder07\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\stubs",
-        "c:\\Users\\pweder07\\AppData\\Roaming\\Code\\User\\globalStorage\\joedevivo.vscode-circuitpython\\bundle\\20230525\\adafruit-circuitpython-bundle-py-20230525\\lib"
+        "c:\\Users\\cwyatt29\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\boards\\0x239A\\0x8038",
+        "c:\\Users\\cwyatt29\\.vscode\\extensions\\joedevivo.vscode-circuitpython-0.1.20-win32-x64\\stubs",
+        "c:\\Users\\cwyatt29\\AppData\\Roaming\\Code\\User\\globalStorage\\joedevivo.vscode-circuitpython\\bundle\\20230530\\adafruit-circuitpython-bundle-py-20230530\\lib"
     ]
 }
